--- a/app/Tpl/Home/default/About/index.html
+++ b/app/Tpl/Home/default/About/index.html
@@ -18,6 +18,14 @@
         </if>
         <link href="__PUBLIC__/css/home/default/style.css" rel="stylesheet" type="text/css" />
         <link href="__PUBLIC__/css/home/default/page.css" rel="stylesheet" type="text/css" />
+        <!-- 引用百度地图API开始 -->
+        <style type="text/css">
+        html,body{margin:0;padding:0;}
+        .iw_poi_title {color:#CC5522;font-size:14px;font-weight:bold;overflow:hidden;padding-right:13px;white-space:nowrap}
+        .iw_poi_content {font:12px arial,sans-serif;overflow:visible;padding-top:4px;white-space:-moz-pre-wrap;word-wrap:break-word}
+        </style>
+        <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
+        <!-- 引用百度地图API结束 -->
     </head>
 
     <body data-spy="scroll" class="home">
@@ -39,8 +47,9 @@
                 <p><{$contact['company']}></p>
                 <p>地址：<{$contact['address']}></p>
                 <p>电话：<{$contact['phone']}> <{$contact['contact']}></p>
-                <p id="allmap"></p>
             </div>
+            <div style="clear:both;width:600px;height:400px;margin:0px auto;padding-bottom:30px;border:#ccc solid 1px;" id="dituContent"></div>
+            <div style="clear:both;width:100%;height:30px;"></div>
             </if>
         </div>
     </div>
@@ -49,11 +58,9 @@
     <include file="./Public/html/home/default/footer.html" />
     <!--foot end-->
     </body>
+    <script type="text/javascript">
+    //<![CDATA[
+    function initMap(){createMap(),setMapEvent(),addMapControl(),addMarker()}function createMap(){var a=new BMap.Map("dituContent"),b=new BMap.Point(113.34762,23.147259);a.centerAndZoom(b,18),window.map=a}function setMapEvent(){map.enableDragging(),map.enableScrollWheelZoom(),map.enableDoubleClickZoom(),map.enableKeyboard()}function addMapControl(){var b,c,a=new BMap.NavigationControl({anchor:BMAP_ANCHOR_TOP_LEFT,type:BMAP_NAVIGATION_CONTROL_LARGE});map.addControl(a),b=new BMap.OverviewMapControl({anchor:BMAP_ANCHOR_BOTTOM_RIGHT,isOpen:1}),map.addControl(b),c=new BMap.ScaleControl({anchor:BMAP_ANCHOR_BOTTOM_LEFT}),map.addControl(c)}function addMarker(){var a,b,c,d,e,f,g,i;for(a=0;a<markerArr.length;a++)b=markerArr[a],c=b.point.split("|")[0],d=b.point.split("|")[1],e=new BMap.Point(c,d),f=createIcon(b.icon),g=new BMap.Marker(e,{icon:f}),createInfoWindow(a),i=new BMap.Label(b.title,{offset:new BMap.Size(b.icon.lb-b.icon.x+10,-20)}),g.setLabel(i),map.addOverlay(g),i.setStyle({borderColor:"#808080",color:"#333",cursor:"pointer"}),function(){var d=createInfoWindow(a),e=g;e.addEventListener("click",function(){this.openInfoWindow(d)}),d.addEventListener("open",function(){e.getLabel().hide()}),d.addEventListener("close",function(){e.getLabel().show()}),i.addEventListener("click",function(){e.openInfoWindow(d)}),b.isOpen&&(i.hide(),e.openInfoWindow(d))}()}function createInfoWindow(a){var b=markerArr[a],c=new BMap.InfoWindow("<b class='iw_poi_title' title='"+b.title+"'>"+b.title+"</b><div class='iw_poi_content'>"+b.content+"</div>");return c}function createIcon(a){var b=new BMap.Icon("http://app.baidu.com/map/images/us_mk_icon.png",new BMap.Size(a.w,a.h),{imageOffset:new BMap.Size(-a.l,-a.t),infoWindowOffset:new BMap.Size(a.lb+5,1),offset:new BMap.Size(a.x,a.h)});return b}var markerArr=[{title:"广州英趣信息科技有限公司",content:"广州市天河区天河北路615号鸿翔大厦1404",point:"113.347454|23.147466",isOpen:1,icon:{w:21,h:21,l:0,t:0,x:6,lb:5}}];initMap();
+    //]]>
+    </script>
 </html>
-<script type="text/javascript">
-// 百度地图API功能
-var map = new BMap.Map("allmap");    // 创建Map实例
-map.centerAndZoom(new BMap.Point(113.384086, 23.141251), 18);  // 初始化地图,设置中心点坐标和地图级别
-map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
-map.setCurrentCity("广州");          // 设置地图显示的城市 此项是必须设置的
-</script>
