--- a/app/Tpl/Interest_admin/Contact/index.html
+++ b/app/Tpl/Interest_admin/Contact/index.html
@@ -30,36 +30,6 @@
                     <td align="right">简　介：&nbsp;&nbsp;</td>
                     <td><textarea id="description"><{$contact['description']}></textarea></td>
                 </tr>
-                <tr>
-                    <td align="right" class="l-table-edit-td">
-                        地　图：&nbsp;&nbsp;
-                    </td>
-                    <td align="left" class="l-table-edit-td">
-                        <span class="btn btn-success fileinput-button" style="color:#fff;">
-                            &nbsp;&nbsp;选择图片
-                            <input id="fileupload" type="file" name="files[]" />
-                            <input id="image" type="hidden" value="<{$contact['map']}>" />
-                        </span>
-                        <br />
-                        <br />
-                        <div id="progress" class="progress" style="display:none;">
-                            <div class="progress-bar progress-bar-success"></div>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td colspan="2" id="image_tip">
-                        <if condition="$contact['src']">
-                        <div id="image-preview">
-                            <a href="<{$contact['src']}>" target="_blank" title="点击查看原图" id="image-preview-outter">
-                                <img src="<{$contact['src']}>" width="160" height="90" border="0" />
-                            </a>
-                            <a href="javascript:void(0);" onclick="delete_image('<{$contact['map']}>');" id="image-preview-delete" title="删除">
-                            </a>
-                        </div>
-                        </if>
-                    </td>
-                </tr>
                 <tr height="60px">
                     <td colspan="2" align="center"><input class="btn btn-primary" type="button" value="保存" onclick="save()" /></td>
                 </tr>
@@ -69,7 +39,7 @@
 </div>
 <style type="text/css">
 <!--
-body{font-size:12px}.l-table-edit-td{padding:10px 20px}.l-table-edit-td input{width:130px}.l-button-submit,.l-button-test{width:80px;float:left;margin-left:10px;padding-bottom:2px}.l-verify-tip{left:230px;top:120px}.l-table-edit tr td span{color:#f30;padding-left:5px}.tipmsg{color:#f30}#image_tip{width:90%;clear:both;margin:12px auto}#image-preview{position:relative;}#image-preview-outter{display:block;}#image-preview-delete{display:block;position:absolute;top:0px;left:144px;background:url(/Public/images/delete.png) no-repeat;background-color:#fff;width:16px;height:16px;}#add_goods_button{width:100%;text-align:center;margin:12px auto}@-webkit-keyframes progress-bar-stripes{from{background-position:40px 0}to{background-position:0 0}}@keyframes progress-bar-stripes{from{background-position:40px 0}to{background-position:0 0}}.progress{height:20px;margin-bottom:20px;overflow:hidden;background-color:#f5f5f5;border-radius:4px;-webkit-box-shadow:inset 0 1px 2px rgba(0,0,0,0.1);box-shadow:inset 0 1px 2px rgba(0,0,0,0.1)}.progress-bar{float:left;width:0;height:100%;font-size:12px;line-height:20px;color:#fff;text-align:center;background-color:#428bca;-webkit-box-shadow:inset 0 -1px 0 rgba(0,0,0,0.15);box-shadow:inset 0 -1px 0 rgba(0,0,0,0.15);-webkit-transition:width .6s ease;transition:width .6s ease}.progress-striped .progress-bar{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,0.15)25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);background-size:40px 40px}.progress.active .progress-bar{-webkit-animation:progress-bar-stripes 2s linear infinite;animation:progress-bar-stripes 2s linear infinite}.progress-bar-success{background-color:#5cb85c}.progress-striped .progress-bar-success{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,0.15)25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent)}.progress-bar-info{background-color:#5bc0de}.progress-striped .progress-bar-info{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,0.15)25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent)}.progress-bar-warning{background-color:#f0ad4e}.progress-striped .progress-bar-warning{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,0.15)25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent)}.progress-bar-danger{background-color:#d9534f}.progress-striped .progress-bar-danger{background-image:-webkit-linear-gradient(45deg,rgba(255,255,255,0.15)25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent);background-image:linear-gradient(45deg,rgba(255,255,255,0.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,0.15) 50%,rgba(255,255,255,0.15) 75%,transparent 75%,transparent)}
+body{font-size:12px}.l-table-edit-td{padding:10px 20px}.l-table-edit-td input{width:130px}.l-button-submit,.l-button-test{width:80px;float:left;margin-left:10px;padding-bottom:2px}.l-verify-tip{left:230px;top:120px}.l-table-edit tr td span{color:#f30;padding-left:5px}.tipmsg{color:#f30}
 -->
 </style>
 <script type="text/javascript" src="__PUBLIC__/ckeditor/ckeditor.js"></script>
@@ -83,36 +53,6 @@ $(function() {
         language      : 'zh-cn',
         filebrowserUploadUrl: '<{:U("news/upload_image")}>'
     });
-    $("#fileupload").fileupload({
-        maxNumberOfFiles: 1,
-        acceptFileTypes: /(\.|\/)(jpe?g|png|bmp)$/i,
-        maxFileSize: 2097152,
-        minFileSize: 1,
-        url: '<{:U("contact/upload")}>',
-        dataType: 'json',
-        send: function (e, data) {
-            $("#progress").show();
-        },
-        done: function (e, data) {
-            if (data.result.status) {
-                $("#progress").hide();
-                $("#image_tip").html("<div id='image-preview'>"+
-                                        "<a href='"+data.result.src+"' target='_blank' title='点击查看原图' id='image-preview-outter'>"+
-                                            "<img src='"+data.result.src+"' width='160' height='90' border='0' />"+
-                                        "</a>"+
-                                        "<a href='javascript:void(0);' onclick=\"delete_image(\'"+data.result.filename+"\');\" id='image-preview-delete' title='删除'>"+
-                                        "</a>"+
-                                    "</div>");
-                $("#image").val(data.result.filename);
-            } else {
-                $("#image_tip").html(data.result.msg);
-            }
-        },
-        progressall: function (e, data) {
-            var progress = parseInt(data.loaded / data.total * 100, 10);
-            $('#progress .progress-bar').css('width', progress + '%');
-        }
-    });
 });
 // 保存设置
 function save() {
@@ -121,7 +61,6 @@ function save() {
     var phone = $.trim($("#phone").val());
     var address = $.trim($("#address").val());
     var description = $.trim($("#description").val());
-    var map = $.trim($("#image").val());
     if (company.length == 0) {
         $.ligerDialog.alert('公司名不能为空', '温馨提示', 'warn');
         return false;
@@ -142,27 +81,10 @@ function save() {
         $.ligerDialog.alert('公司简介不能为空', '温馨提示', 'warn');
         return false;
     }
-    if (map.length == 0) {
-        $.ligerDialog.alert('请上传一张地图', '温馨提示', 'warn');
-        return false;
-    }
-    $.post("<{:U('contact/index')}>", {company: company, contact: contact, phone: phone, address: address, description: description, map: map}, function(data) {
+    $.post("<{:U('contact/index')}>", {company: company, contact: contact, phone: phone, address: address, description: description}, function(data) {
         if (data.status) {
             $.ligerDialog.alert(data.msg, '成功了(^_^)', 'success');
             location.reload(true);
-        } else {
-            $.ligerDialog.alert(data.msg, '出错了(>_<)', 'error');
-            return false;
-        }
-    }, 'json');
-}
-
-//删除图片
-function delete_image(filename) {
-    $.post('<{:U("contact/delete_image")}>', {filename: filename}, function(data) {
-        if (data.status) {
-            $("#image_tip").empty();
-            $("#image").val("");
         } else {
             $.ligerDialog.alert(data.msg, '出错了(>_<)', 'error');
             return false;
