fix the right floating-box bug

--- a/app/Tpl/Home/default/About/index.html
+++ b/app/Tpl/Home/default/About/index.html
@@ -23,6 +23,7 @@
         </style>
         <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
         <!-- 引用百度地图API结束 -->
+        <script type="text/javascript" src="__PUBLIC__/js/jquery.js"></script>
     </head>
 
     <body data-spy="scroll" class="home">
