fix backend copyright display bug

--- a/app/Tpl/Interest_admin/Setting/copyright.html
+++ b/app/Tpl/Interest_admin/Setting/copyright.html
@@ -10,7 +10,7 @@
         </div>
         <div class="top_6">
             <div class="top_6_textarea">
-                <span>内　容：</span><textarea id="content"><{$toCustomer['content']}></textarea>
+                <span>内　容：</span><textarea id="content"><{$copyright['content']}></textarea>
             </div>
             <div class="top_6_button">
                 <input class="btn btn-primary" type="button" value="保存" onclick="save()" />
